2011-08-04  Mark Rowe  <mrowe@apple.com>

        Future-proof Xcode configuration settings.

        * DumpRenderTree/mac/Configurations/Base.xcconfig:
        * DumpRenderTree/mac/Configurations/CompilerVersion.xcconfig:
        * DumpRenderTree/mac/Configurations/DebugRelease.xcconfig:
        * MiniBrowser/Configurations/Base.xcconfig:
        * MiniBrowser/Configurations/CompilerVersion.xcconfig:
        * MiniBrowser/Configurations/DebugRelease.xcconfig:
        * TestWebKitAPI/Configurations/Base.xcconfig:
        * TestWebKitAPI/Configurations/CompilerVersion.xcconfig:
        * TestWebKitAPI/Configurations/DebugRelease.xcconfig:
        * WebKitTestRunner/Configurations/Base.xcconfig:
        * WebKitTestRunner/Configurations/CompilerVersion.xcconfig:
        * WebKitTestRunner/Configurations/DebugRelease.xcconfig:

2011-08-04  Adam Barth  <abarth@webkit.org>

        Fancier debug logging.

        * Scripts/webkitpy/layout_tests/controllers/manager.py:

2011-08-04  David Levin  <levin@chromium.org>

        [chromium] Fix assertion failure in ThreadIdentifierData::identifier in TestShell.
        https://bugs.webkit.org/show_bug.cgi?id=65685

        Reviewed by Dmitry Titov.

        * DumpRenderTree/chromium/WebViewHost.cpp:
        (WebViewHost::WebViewHost): Intialize WTF threading before
        anything in WTF is used. Usually this is done by WebViewImpl::WebViewImpl
        but in some cases code may use WTF without creating WebViewImpl and
        WTF code functionality may call WTF::currentThread, which requires
        this initialization now.

2011-08-04  Adam Barth  <abarth@webkit.org>

        An educated guess at causing the Windows bots on build.webkit.org to
        find the SVN revision number.

        * Scripts/webkitpy/layout_tests/controllers/manager.py:
        * Scripts/webkitpy/layout_tests/port/base.py:

2011-08-04  Adam Barth  <abarth@webkit.org>

        More logging to help debug the "no SVN rev on Chromium Windows bots"